--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
 fastapi
-uvicorn
-openai
-jinja2
-python-multipart
-requests
+uvicorn[standard]
+
 python-dotenv
+pydantic
+
+langchain-core
+langchain-openai
+langchain-community
+langgraph>=0.2.7
+langgraph-checkpoint-sqlite
+
+httpx
+requests
+
+jinja2
+
 python-docx
 reportlab
-langgraph
+
+tavily-python
+langchain-community
+sqlite3
